# projeto_django

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_presenca.py
django_admin/: settings.py  urls.py
projeto_django/: settings.py  urls.py
