    [project]
    name = "projeto_django"
    version = "0.1.0"
    description = ""
    authors = [
        {name="Daltro-Oliveira-Vinuto", email="daltroov777@gmail.com"},
        {name = "Kyara-Esteves-de-Sousa",email = "shadoxkan@gmail.com"}
    ]
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "django (>=6.0,<7.0)",
        "python-dotenv (>=1.2.1,<2.0.0)",
        "psycopg (>=3.3.2,<4.0.0)",
        "djangorestframework (>=3.16.1,<4.0.0)",
        "drf-spectacular (>=0.29.0,<0.30.0)",
        "drf-spectacular[swagger] (>=0.29.0,<0.30.0)",
        "drf-spectacular[redoc] (>=0.29.0,<0.30.0)",
        "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
        "gunicorn (>=23.0.0,<24.0.0)",
        "uvicorn (>=0.38.0,<0.39.0)",
        "django-debug-toolbar (>=6.1.0,<7.0.0)",
        "django-extensions (>=4.1,<5.0)",
        "dj-database-url (>=3.0.1,<4.0.0)"
    ]


    [build-system]
    requires = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"

